--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!--CSS-->
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <title class="title-contacto">Contacto-The Closet</title>
 </head>
 
@@ -94,8 +94,8 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
         </script>
     <!--Script de mis archivo -->
-    <script src="./js/classConst.js" type="text/javascript"></script>
-    <script src="./js/functionViejas.js" type="text/javascript"></script>
+    <script src="../js/classConst.js" type="text/javascript"></script>
+    <script src="../js/functionViejas.js" type="text/javascript"></script>
 </body>
 
 </html>
