--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg bg-celeste">
 
         <div class="container">
-            <a class="navbar-brand text-white mr-4" href="../index.html">The Closet</a>
+            <a class="navbar-brand text-white mr-4" href="index.html">The Closet</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
